--- a/NumpyMatrix.ipynb
+++ b/NumpyMatrix.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdz4i+vWzx9OvEc4u8lJ5k",
+      "authorship_tag": "ABX9TyNQpiqvgRsGkcwooyHttOvl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         "id": "QHC9QUfqRkTp",
         "outputId": "52ceff6c-53f5-43a0-e5e0-26839f161af8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -85,7 +85,7 @@
         "id": "L7Hu_f3FSPM1",
         "outputId": "4ba97d30-d35b-48da-ca5b-faf1dfc775b6"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -116,7 +116,7 @@
         "id": "fe3vXEpOZw9u",
         "outputId": "62969958-286d-4505-ce51-8058892a67e9"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -143,7 +143,7 @@
         "id": "GM-bueFTbhYp",
         "outputId": "47d7bf58-34de-4c9b-f539-ae719683ac5f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -170,7 +170,7 @@
         "id": "LdSFKk7XSW2o",
         "outputId": "8b2819be-2ce4-40bf-8200-840b1da41fbf"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -250,9 +250,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5lnYGu30kEVJ",
-        "outputId": "70ae026e-8248-49d1-8385-8a2216c61d62"
+        "outputId": "26196f25-f601-4af4-8a76-507ce929a6ac"
       },
-      "execution_count": 27,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -268,7 +268,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 4
         }
       ]
     },
@@ -296,7 +296,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,7 +323,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -349,7 +349,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -375,7 +375,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,7 +401,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -428,7 +428,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -455,7 +455,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -483,7 +483,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -515,7 +515,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -543,7 +543,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -572,7 +572,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -601,7 +601,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -625,12 +625,12 @@
       ],
       "metadata": {
         "id": "qXZ05QC8tBIa",
-        "outputId": "01c3e755-5ae4-4888-aa90-8565d345e5bb",
+        "outputId": "e0060c14-4a37-41e3-d9d4-d798cadf9e0c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 65,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -650,7 +650,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 65
+          "execution_count": 5
         }
       ]
     },
@@ -667,7 +667,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -694,7 +694,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -724,7 +724,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -759,7 +759,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -786,7 +786,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -801,6 +801,169 @@
           },
           "metadata": {},
           "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Integer indexing to index elements at (0,0,0), (1,1,1) and (2,2,2)"
+      ],
+      "metadata": {
+        "id": "x3ydQAwdgYH8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "threeDArray[[0,1,2],[0,1,2], [0,1,2]]    #, getting data from first dimension, second dimension, third dimension"
+      ],
+      "metadata": {
+        "id": "-b-7uKu5ggKH",
+        "outputId": "e6d2bd92-b972-4524-dedf-2a64c4ca822e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1, 14, 26])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "threeDArray > 15  # doing boolean"
+      ],
+      "metadata": {
+        "id": "2mG4xQ_ehMmF",
+        "outputId": "39ecf289-9839-4c87-985f-dc211375b083",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[False, False, False],\n",
+              "        [False, False, False],\n",
+              "        [False, False, False]],\n",
+              "\n",
+              "       [[False, False, False],\n",
+              "        [False, False, False],\n",
+              "        [ True,  True,  True]],\n",
+              "\n",
+              "       [[ True,  True,  True],\n",
+              "        [ True,  True,  True],\n",
+              "        [ True,  True,  True]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "threeDArray[threeDArray > 15]"
+      ],
+      "metadata": {
+        "id": "6r7aSddFhRyU",
+        "outputId": "5b609525-445f-4321-c834-5e7d62bdad9f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([16, 17, 18, 18, 19, 20, 21, 22, 23, 24, 25, 26])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# if we don't want to collapse the indexing\n",
+        "np.where(threeDArray > 15, threeDArray, np.nan)"
+      ],
+      "metadata": {
+        "id": "RtlBl_p4hZmC",
+        "outputId": "8e663479-027f-4f7d-91e0-21687cf01c52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[nan, nan, nan],\n",
+              "        [nan, nan, nan],\n",
+              "        [nan, nan, nan]],\n",
+              "\n",
+              "       [[nan, nan, nan],\n",
+              "        [nan, nan, nan],\n",
+              "        [16., 17., 18.]],\n",
+              "\n",
+              "       [[18., 19., 20.],\n",
+              "        [21., 22., 23.],\n",
+              "        [24., 25., 26.]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# if we provide only the condition to np.where, we will retrieve the indices where the condition is met\n",
+        "np.where(threeDArray > 15)"
+      ],
+      "metadata": {
+        "id": "Nh4QIy6Oh2c_",
+        "outputId": "d313d57e-60eb-4a44-c63f-b9b2348209cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2]),\n",
+              " array([2, 2, 2, 0, 0, 0, 1, 1, 1, 2, 2, 2]),\n",
+              " array([0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     }
