NumPy Matrix manipulation

--- a/NumpyMatrix.ipynb
+++ b/NumpyMatrix.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQpiqvgRsGkcwooyHttOvl",
+      "authorship_tag": "ABX9TyOqeg0c901b92feUbfsGwVB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -819,11 +819,11 @@
         "threeDArray[[0,1,2],[0,1,2], [0,1,2]]    #, getting data from first dimension, second dimension, third dimension"
       ],
       "metadata": {
-        "id": "-b-7uKu5ggKH",
-        "outputId": "e6d2bd92-b972-4524-dedf-2a64c4ca822e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-b-7uKu5ggKH",
+        "outputId": "e6d2bd92-b972-4524-dedf-2a64c4ca822e"
       },
       "execution_count": 6,
       "outputs": [
@@ -845,11 +845,11 @@
         "threeDArray > 15  # doing boolean"
       ],
       "metadata": {
-        "id": "2mG4xQ_ehMmF",
-        "outputId": "39ecf289-9839-4c87-985f-dc211375b083",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2mG4xQ_ehMmF",
+        "outputId": "39ecf289-9839-4c87-985f-dc211375b083"
       },
       "execution_count": 7,
       "outputs": [
@@ -881,11 +881,11 @@
         "threeDArray[threeDArray > 15]"
       ],
       "metadata": {
-        "id": "6r7aSddFhRyU",
-        "outputId": "5b609525-445f-4321-c834-5e7d62bdad9f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6r7aSddFhRyU",
+        "outputId": "5b609525-445f-4321-c834-5e7d62bdad9f"
       },
       "execution_count": 8,
       "outputs": [
@@ -908,11 +908,11 @@
         "np.where(threeDArray > 15, threeDArray, np.nan)"
       ],
       "metadata": {
-        "id": "RtlBl_p4hZmC",
-        "outputId": "8e663479-027f-4f7d-91e0-21687cf01c52",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RtlBl_p4hZmC",
+        "outputId": "8e663479-027f-4f7d-91e0-21687cf01c52"
       },
       "execution_count": 10,
       "outputs": [
@@ -945,11 +945,11 @@
         "np.where(threeDArray > 15)"
       ],
       "metadata": {
-        "id": "Nh4QIy6Oh2c_",
-        "outputId": "d313d57e-60eb-4a44-c63f-b9b2348209cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Nh4QIy6Oh2c_",
+        "outputId": "d313d57e-60eb-4a44-c63f-b9b2348209cd"
       },
       "execution_count": 11,
       "outputs": [
@@ -964,6 +964,101 @@
           },
           "metadata": {},
           "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "we can use colon (:) to obtain every element at an index level. example to find all elements in the first row at each depth\n"
+      ],
+      "metadata": {
+        "id": "3PMSrNK6iXse"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "threeDArray[:, 0, :]"
+      ],
+      "metadata": {
+        "id": "Spktd210inFW",
+        "outputId": "342133cd-6041-4630-8ef1-86f4cd4c28e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1,  2,  3],\n",
+              "       [10, 11, 12],\n",
+              "       [18, 19, 20]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# every element in the first column\n",
+        "threeDArray[:, :, 0]"
+      ],
+      "metadata": {
+        "id": "ZqOGkeldiybu",
+        "outputId": "762d5d72-ffd2-41a5-8b58-cd4a99afcb1d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1,  4,  7],\n",
+              "       [10, 13, 16],\n",
+              "       [18, 21, 24]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# we can use ellipsis (...) if we don't know how many preceding dimensions there are:\n",
+        "threeDArray[..., 0]"
+      ],
+      "metadata": {
+        "id": "bgR5PoDMjCNg",
+        "outputId": "0b0d2650-38a8-49b7-8c0e-d3184c5f99b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1,  4,  7],\n",
+              "       [10, 13, 16],\n",
+              "       [18, 21, 24]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ]
     }
